--- a/QO/Isomeria/IsomeriaGeometrica.tex
+++ b/QO/Isomeria/IsomeriaGeometrica.tex
@@ -1,39 +1,61 @@
-#+TITLE: Isomeria Geométrica
+% Created 2024-11-06 Wed 11:18
+% Intended LaTeX compiler: lualatex
+\documentclass{beamer}
+\usetheme{default}
+\author{fabio}
+\date{\today}
+\title{Isomeria Geométrica}
+\hypersetup{
+ pdfauthor={fabio},
+ pdftitle={Isomeria Geométrica},
+ pdfkeywords={},
+ pdfsubject={},
+ pdfcreator={Emacs 29.4 (Org mode 9.6.15)}, 
+ pdflang={English}}
+\begin{document}
 
-* Isomeria Geométrica
-
-** Isomeria Geométrica
-
- -  Conhecida como a isomeria /cis-trans/.
- -  Ocorre em compostos com dupla ligação ou cíclicos .
- -  Compostos com dupla ligação.
-
-
-*** A block                                           :BMCOL:
-    :PROPERTIES:
-    :BEAMER_col: 0.4
-    :END:
-
-#+CAPTION: /cis/ grupos do mesmo lado. /cis/-1,2-dicloro-eteno    
-[[./CIS.png]]
-
-*** A block                                           :BMCOL:
-    :PROPERTIES:
-    :BEAMER_col: 0.4
-    :END:
-#+CAPTION: /trans/ grupos de lados opostos.  /cis/-1,2-dicloro-eteno
-[[./Trans.png]]
+\begingroup
+  \setbeamertemplate{headline}{}
+  \maketitle
+  \endgroup
+\begin{frame}{Sumário}
+\tableofcontents
+\end{frame}
 
 
+\begin{frame}[label={sec:orge237f00}]{Isomeria Geométrica}
+\begin{block}{Isomeria Geométrica}
+\begin{itemize}
+\item Conhecida como a isomeria \emph{cis-trans}.
+\item Ocorre em compostos com dupla ligação ou cíclicos .
+\item Compostos com dupla ligação.
+\end{itemize}
 
-* Isomeria dos  Compostos cíclicos
-** Compostos cíclicos
+
+\begin{columns}
+\begin{column}{0.4\columnwidth}
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=.9\linewidth]{./CIS.png}
+\caption{\emph{cis} grupos do mesmo lado. \emph{cis}-1,2-dicloro-eteno}
+\end{figure}
+\end{column}
+
+\begin{column}{0.4\columnwidth}
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=.9\linewidth]{./Trans.png}
+\caption{\emph{trans} grupos de lados opostos.  \emph{cis}-1,2-dicloro-eteno}
+\end{figure}
+\end{column}
+\end{columns}
+\end{block}
+\end{frame}
 
 
 
-
-
-#+begin_export latex
+\begin{frame}[label={sec:org61eab86}]{Isomeria dos  Compostos cíclicos}
+\begin{block}{Compostos cíclicos}
 \begin{tblr}{ccc}
 
 \schemestart
@@ -61,14 +83,14 @@
 \cyclohexanev{2B==OH;3A==OH} & \cyclohexanev{2SA==H;2SB==OH;3SB==OH;3SA==H} & \cyclohexanev{2SA==H;2SB==OH;3Sd==OH;3Su==H}\\
 {\bfseries {\itshape trans}-cicloexan-1,2-diol} & {\bfseries {\itshape cis}-cicloexan-1,2-diol} & {\bfseries {\itshape trans}-cicloexan-1,2-diol}
  \end{tblr}
-#+end_export
+\end{block}
 
 
-** Alquenos Dissubstituídos
+\begin{block}{Alquenos Dissubstituídos}
+\begin{itemize}
+\item Os termos \emph{cis} e \emph{trans} são usados apenas para alcenos \alert{dissubstituídos}.
+\end{itemize}
 
--  Os termos /cis/ e /trans/ são usados apenas para alcenos *dissubstituídos*.
-
-#+begin_export latex
 \begin{center}
 \small
 \schemestart
@@ -81,19 +103,17 @@
 \chemname{\chemfig{H-[:-60]C(-[:-120]H_3C)=C(-[:-60]H)-[:60]CH_2CH_3}}{\bfseries{\itshape trans}-pent-2-eno}
 \schemestop
 \end{center}
-#+end_export
+\end{block}
 
 
 
 
-** Exemplos
+\begin{block}{Exemplos}
+\begin{question}
+\scriptsize\{
+(\alert{UERJ}) O ácido linoleico, essencial à dieta humana, apresenta a seguinte fórmula estrutural espacial:
 
-#+begin_question
-\scriptsize{
-(*UERJ*) O ácido linoleico, essencial à dieta humana, apresenta a seguinte fórmula estrutural espacial:
-
-#+begin_center
-#+begin_export latex
+\begin{center}
 %\chemfig{-[:330]-[:30]-[:330]-[:30]-[:330]=[:30]-[:330]-[:30]=[:330]-[:30]%
 %-[:330]-[:30]-[:330]-[:30]-[:330]-[:30]-[:330](=[:30]O)-[:270]H}
 {\scriptsize
@@ -101,49 +121,42 @@
 \chemfig{OH-[:150,,1](=[:90]O)-[:210]-[:150]-[:210]-[:150]-[:210]-[:150]%
 -[:210]-[:150]=[:210]-[:270]-[:210]=[:150]-[:90]-[:150]-[:90]-[:150]-[:90]}
 }
-#+end_export
-
-#+end_center
+\end{center}
 Como é possível observar, as ligações duplas presentes nos átomos de carbono 9 e 12 afetam o formato espacial da molécula. As conformações espaciais nessas ligações duplas são denominadas, respectivamente:
 
-#+ATTR_LATEX: :options (2)
-#+begin_choice
+\begin{choice}(2)
 \choice cis e cis
 \choice cis e trans
 \choice trans e cis
 \choice trans e trans
-#+end_choice
-}
-#+end_question 
+\end{choice}
+\}
+\end{question}
+\end{block}
 
-** 
-#+ATTR_LATEX: :options [print=true]
-#+begin_answer
-#+LATEX: \scriptsize{
-Analisando as duas insaturações das moléculas, observa-se que os ligantes não mostrados são átomos de hidrogênio. Em ambas as insaturações, os átomos de hidrogênio estão do mesmo lado da ligação dupla, logo estão em posição *cis*.
+\begin{block}{}
+\begin{answer}[print=true]
+\scriptsize{
+Analisando as duas insaturações das moléculas, observa-se que os ligantes não mostrados são átomos de hidrogênio. Em ambas as insaturações, os átomos de hidrogênio estão do mesmo lado da ligação dupla, logo estão em posição \alert{cis}.
 
-#+begin_export latex
 \chemfig{OH-[:150,,1](=[:90]O)-[:210]-[:150]-[:210]-[:150]-[:210]-[:150]%
 -[:210]-[:150](-[:90]H)=[:210](-[:150]H)-[:270]-[:210](-[:270]H)=[:150](%
 -[:210]H)-[:90]-[:150]-[:90]-[:150]-[:90]}
-#+end_export
-#+LATEX:}
-#+end_answer
+}
+\end{answer}
+\end{block}
+\end{frame}
 
 
 
-* Regra de Cahn–Ingold–Prelog
-**  Prefixos E e Z
-:PROPERTIES:
-:BEAMER_opt: allowframebreaks
-:END:
+\begin{frame}[label={sec:org7f9fbec}]{Regra de Cahn–Ingold–Prelog}
+\begin{block}{Prefixos E e Z}
+\begin{itemize}
+\item Para designar alquenos tri e tetrassubstituídos utiliza-se outro sistema de nomenclatura, denominado \alert{E-Z}.
+\item No sistema E-Z são examinados os grupos ligados a cada átomo de carbono da dupla ligação e colocados em ordem de prioridade.
+\item Os átomos de maior número atômico têm maior prioridade. Ordem decrescente de prioridade:
+\end{itemize}
 
-
-- Para designar alquenos tri e tetrassubstituídos utiliza-se outro sistema de nomenclatura, denominado *E-Z*.
-- No sistema E-Z são examinados os grupos ligados a cada átomo de carbono da dupla ligação e colocados em ordem de prioridade.
-- Os átomos de maior número atômico têm maior prioridade. Ordem decrescente de prioridade:
-  
-#+begin_export latex
 \begin{center}
 \schemestart
 I > Br > \ch{C$\ell$} > S > F > O > N > C > H
@@ -154,38 +167,36 @@ I > Br > \ch{C$\ell$} > S > F > O > N > C > H
 	minimum height=10mm, below=1cm of c1,font=\bfseries] {Ordem descrescente de prioridade}; % length of arrow
 	}
 	\end{center}
-#+end_export
 
 \framebreak
 
-- No caso de átomos de mesmo número atômico, o isótopo de maior número de massa tem maior prioridade:
-  
-  #+begin_export latex
+\begin{itemize}
+\item No caso de átomos de mesmo número atômico, o isótopo de maior número de massa tem maior prioridade:
+
 \begin{tcolorbox}[colback=red!5!white,colframe=red!75!black]
  Hidrogênio \ch{->} \isotope{3,H} > \isotope{2,H} > \isotope{1,H}\\
  Carbono \ch{->} \isotope{14,C} > \isotope{13,C} > \isotope{12,C} 
 \end{tcolorbox}
-  #+end_export
 
-- Quando os átomos ligados aos carbonos da ligação dupla forem iguais, os números e as massas atômicas dos elementos ligados a esses átomos são usados para realizar o desempate.
-- No sistema *E-Z*, examinam-se os dois átomos ou grupos ligados em cada um dos carbonos da ligação dupla e determina-se a ordem de prioridade de cada um deles.
-- Se os grupos de maior prioridade em cada carbono estiverem do mesmo lado de um plano imaginário passando por esses carbonos, a geometria dessa dupla ligação será designada pela letra Z (do alemão /Zusammen/, *“juntos”*).
-- Se os grupos de maior prioridade em cada carbono estiverem em lados opostos da dupla ligação, a geometria da ligação será designada pela letra E (do alemão /Entgegen/, *“opostos”*).
+\item Quando os átomos ligados aos carbonos da ligação dupla forem iguais, os números e as massas atômicas dos elementos ligados a esses átomos são usados para realizar o desempate.
+\item No sistema \alert{E-Z}, examinam-se os dois átomos ou grupos ligados em cada um dos carbonos da ligação dupla e determina-se a ordem de prioridade de cada um deles.
+\item Se os grupos de maior prioridade em cada carbono estiverem do mesmo lado de um plano imaginário passando por esses carbonos, a geometria dessa dupla ligação será designada pela letra Z (do alemão \emph{Zusammen}, \alert{“juntos”}).
+\item Se os grupos de maior prioridade em cada carbono estiverem em lados opostos da dupla ligação, a geometria da ligação será designada pela letra E (do alemão \emph{Entgegen}, \alert{“opostos”}).
+\end{itemize}
 
 \framebreak
 
 
-#+begin_export latex
 \begin{center}
 \schemestart                                           
 \chemfig{@{a1}C{\ell}@{a2}-[:-60,1]C(-[:-120]@{a4}F)=C(-[:-60]@{a5}H)-[:60]@{a3}Br}
 \schemestop
 \end{center}
-#+end_export
 
-- Os átomos ligados ao *C1* são Cl (prioridade 1) e F (prioridade 2) e os ligados ao *C2*, Br (prioridade 1) e H (prioridade 2). Grupos de maior prioridade ligados do mesmo lado da dupla.
+\begin{itemize}
+\item Os átomos ligados ao \alert{C1} são Cl (prioridade 1) e F (prioridade 2) e os ligados ao \alert{C2}, Br (prioridade 1) e H (prioridade 2). Grupos de maior prioridade ligados do mesmo lado da dupla.
+\end{itemize}
 
-#+begin_export latex
 \vspace{.4cm}
 \begin{center}
 \schemestart                                           
@@ -198,13 +209,11 @@ I > Br > \ch{C$\ell$} > S > F > O > N > C > H
 \node[circle, draw, inner sep=2pt,below=.2cm of a5] (label) {2};
 }
 \end{center}
-#+end_export
 
 
 \framebreak
 
 
-#+begin_export latex
 \begin{center}
 \schemestart                                           
 \chemname[6ex]{\chemfig{@{a1}H_3C@{a2}-[:-60,1]C(-[:-120]@{a4}H)=C(-[:-60]@{a5}H)-[:60]@{a3}CH_3}}{\bfseries {\itshape Z}-but-2-eno} \qquad \qquad  \qquad 
@@ -224,34 +233,33 @@ I > Br > \ch{C$\ell$} > S > F > O > N > C > H
 
 \end{center}
 
-#+end_export
-
 
 \framebreak
 
-#+ATTR_LATEX: :scale 0.22
-[[./org_ez.png]]
+\begin{center}
+\includegraphics[scale=0.22]{./org_ez.png}
+\end{center}
+\end{block}
+\end{frame}
 
-* Isomeria Geométrica com Heteroátomos
+\begin{frame}[label={sec:org3efc155}]{Isomeria Geométrica com Heteroátomos}
+\begin{block}{Isomeria Geométrica com Heteroátomos}
+\begin{itemize}
+\item Algumas funções que contém ligados a carbono sp\textsuperscript{2}, como as oximas e iminas, possuem geometria definida já que o giro em torno da ligação \(\pi\) possui energia em geral proibitiva. Esses compostos podem ser nomeados seguindo o sistema (\alert{E})-(\alert{Z}) como utilizado em alcenos.
+\end{itemize}
 
-** Isomeria Geométrica com Heteroátomos
-
-
-- Algumas funções que contém ligados a carbono sp^2, como as oximas e iminas, possuem geometria definida já que o giro em torno da ligação $\pi$ possui energia em geral proibitiva. Esses compostos podem ser nomeados seguindo o sistema (*E*)-(*Z*) como utilizado em alcenos.
-
-[[./org_ez_hetero.png]]
-
-
-
-
-
-
-
-** Fim da Aula
+\begin{center}
+\includegraphics[width=.9\linewidth]{./org_ez_hetero.png}
+\end{center}
+\end{block}
 
 
 
-#+begin_export latex
+
+
+
+
+\begin{block}{Fim da Aula}
 \begin{tikzpicture}
 \node[graduate,sword, minimum size=1cm]{ \bfseries Bons Estudos !!!!};
 \end{tikzpicture}
@@ -261,5 +269,6 @@ Download Aula  \\%& & Lista de Exercícios \\
  \qrcode[height=2in]{https://github.com/fabinholima/AulaQuimicaPDF/blob/main/QO/Isomeria/Isomeria_Geometrica.pdf} \\  %& & \qrcode[height=2in]{https://mark.nl.tab.digital/s/6kSsDYwW4icCK9X}\\
  \end{tabular}
  \end{center}
-#+end_export
-
+\end{block}
+\end{frame}
+\end{document}
